--- a/style.css
+++ b/style.css
@@ -140,7 +140,16 @@ body {
     font-family: 'Comfortaa', sans-serif;
 }
 
-/* Толығырақ оқу түймесі */
+/* Fix images: centered and with rounded edges */
+.post-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 15px auto;
+    border-radius: 15px;
+}
+
+/* "Read More" button styling */
 .read-more-btn {
     background-color: #E7926C;
     color: #fff;
@@ -158,7 +167,7 @@ body {
     background-color: #C7D7CA;
 }
 
-/* Аяқтау */
+/* Footer */
 footer {
     text-align: center;
     padding: 15px;
